API now serves openapi spec, and delete database has been tested.
